Fix table of contents styles on mobile

--- a/_source/_sass/okta/base/_layout.scss
+++ b/_source/_sass/okta/base/_layout.scss
@@ -7,7 +7,7 @@ body {
     padding-top: 100px;
     position: relative;
 
-  @include media('<small') {
+  @include media('<medium') {
     padding-top: 75px;
   }
 
